--- a/package.json
+++ b/package.json
@@ -14,40 +14,40 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "axios": "^0.19.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "@babel/plugin-proposal-export-default-from": "~7.8.3",
+    "axios": "~0.19.2",
+    "prop-types": "~15.7.2",
+    "react": "~16.13.1",
+    "react-dom": "~16.13.1",
+    "react-redux": "~7.2.0",
+    "redux": "~4.0.5",
+    "redux-thunk": "~2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.0.0",
-    "eslint": "^5.3.0",
-    "eslint-config-prettier": "^5.0.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.13.0",
-    "html-webpack-plugin": "^3.2.0",
-    "keymirror": "^0.1.1",
-    "less": "^3.9.0",
-    "less-loader": "^5.0.0",
-    "lodash": "^4.17.13",
-    "prettier": "^1.18.2",
-    "reselect": "^4.0.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.2"
+    "@babel/core": "~7.9.0",
+    "@babel/preset-env": "~7.9.0",
+    "@babel/preset-react": "~7.9.4",
+    "babel-eslint": "~10.1.0",
+    "babel-loader": "~8.1.0",
+    "css-loader": "~3.4.2",
+    "eslint": "~6.8.0",
+    "eslint-config-prettier": "~6.10.1",
+    "eslint-config-react": "~1.1.7",
+    "eslint-import-resolver-webpack": "~0.12.1",
+    "eslint-loader": "~3.0.3",
+    "eslint-plugin-import": "~2.20.1",
+    "eslint-plugin-prettier": "~3.1.2",
+    "eslint-plugin-react": "~7.10.0",
+    "html-webpack-plugin": "~4.0.2",
+    "keymirror": "~0.1.1",
+    "less": "~3.11.1",
+    "less-loader": "~5.0.0",
+    "lodash": "~4.17.15",
+    "prettier": "~2.0.2",
+    "reselect": "~4.0.0",
+    "style-loader": "~1.1.3",
+    "webpack": "~4.42.1",
+    "webpack-cli": "~3.3.11",
+    "webpack-dev-server": "~3.10.3"
   }
 }
